# skillbox_20

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: settings.py  urls.py
shopapp/: admin.py  cart.py  forms.py  middleware.py  models.py  urls.py  views.py
shopapp/management/commands/: create_orders.py  create_products.py
shopapp/migrations/: 0001_initial.py  0002_add_archived_field.py  0003_uploadedfile.py  0004_alter_uploadedfile_content_type.py
shopapp/templates/: base.html
shopapp/templates/shopapp/: cart.html  login.html  order_create.html  order_form.html  order_success.html  orders_list.html  product_detail.html  product_form.html  products_list.html  shop_index.html  throttle_test.html  upload_file.html
