[tool.poetry]
name = "mysite"
version = "1.0.0"
description = "Django shop project"
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"